# rs-hcnet-xdr

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  rust.yml
src/: lib.rs
src/cli/: version.rs
src/curr/: generated.rs  scval_validations.rs  str.rs
src/next/: generated.rs  scmap.rs  scval_validations.rs
tests/: arbitrary.rs  serde.rs  serde_tx.rs  str.rs  tx_debug_display.rs  tx_prot18.rs  tx_read_edge_cases.rs  tx_small.rs  vecm.rs  version.rs
xdr/: curr-version  next-version
